--- a/src/Student13/Ex2/Main.css
+++ b/src/Student13/Ex2/Main.css
@@ -2,8 +2,12 @@
     margin: 0px;
     padding: 0px;
     font-family: Arial, Helvetica, sans-serif;
+    line-height: 2em;
 }
 
 body {
     background-color: lightgray
+}
+h1 {
+    background-color: rgb(80, 80, 232)
 }
